fix project & synchro menubar overlapping menus

--- a/src/kolekti_server/kserver/static/css/kolekti.css
+++ b/src/kolekti_server/kserver/static/css/kolekti.css
@@ -11,9 +11,6 @@ div.main>h1 {
     padding-right:12px;
 }
 
-.navbar#navbar2 {
-    margin-top:50px;
-}
 
 /*
 .side .affix {
@@ -145,8 +142,9 @@ label {
 /* project info bar */
 
 #navbar2 {
-    min-height:25px;
-    margin-bottom:-10px;
+    margin-top:50px;
+    /*    min-height:25px;    */
+    left:auto;
 }
 
 #navbar2 .strong {
